--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
-    "tailwindcss": "^4.0.17",
-	"use-chromecast-caf-sender": "^0.0.5",
-	"use-chromecast-caf-receiver": "^0.0.3"
+    "tailwindcss": "^4.0.17"
 },
 "devDependencies": {
 	"@eslint/js": "^9.21.0",
