--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@radix-ui/react-slider": "^1.3.5",
     "@tailwindcss/vite": "^4.0.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
     "tailwindcss": "^4.0.17"
-},
-"devDependencies": {
-	"@eslint/js": "^9.21.0",
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
