--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . && tsc -b",
-	"test": "vitest",
+    "test": "vitest",
     "preview": "vite preview",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slider": "^1.3.5",
     "@tailwindcss/vite": "^4.0.17",
+    "lucide-react": "^0.544.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^3.0.6",
